# cli-saver

./: README.md  pyproject.toml  seed
.claude/: settings.local.json
cli_saver/: __init__.py  cli.py  config.py  display.py  lookup.py  payments.py  storage.py  wrapper.py
cli_saver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli_saver_deals_agent/: __init__.py  cli.py  database.py  parser.py
